fix that pages are not the same margin and spacing

--- a/src/source/screens/ContactUs/ContactHeader/styles.css
+++ b/src/source/screens/ContactUs/ContactHeader/styles.css
@@ -236,3 +236,7 @@
     }
  
 }
+
+.getintouchcol{
+    margin-left: 270px;
+}
