--- a/src/source/screens/Services/sections/ServicesHeader/styles.css
+++ b/src/source/screens/Services/sections/ServicesHeader/styles.css
@@ -6,7 +6,7 @@
     opacity: 100%;
 }
 .ServicessHeader{
-    margin: 60px;
+    margin-left: 30vh;
     display: flex;
     flex-direction: column;
     align-items: start;
